<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="auto"
    android:visibility="visible"
    tools:context=".HomeActivity"
    tools:visibility="visible">

    <TextView
        android:id="@+id/HomeTitle"
        android:layout_width="242dp"
        android:layout_height="107dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/TitleMain"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
        android:textColor="#000000"
        android:textSize="34sp"
        android:textStyle="bold"
        android:typeface="serif"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/HomeImage"
        android:layout_width="131dp"
        android:layout_height="112dp"
        android:contentDescription="@string/MainLogo"
        android:src="@drawable/capture_d_cran_2022_03_03_111258"
        app:layout_constraintStart_toEndOf="@+id/HomeTitle"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/textEntree"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="251dp"
        android:layout_height="58dp"
        android:ems="10"
        android:fontFamily="sans-serif-medium"
        android:text="@string/Entree"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#000000"
        android:focusable="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.344" />

    <TextView
        android:id="@+id/textDesserts"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="251dp"
        android:layout_height="58dp"
        android:ems="10"
        android:fontFamily="sans-serif-medium"
        android:text="@string/Desserts"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#000000"
        android:focusable="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.609" />

    <TextView
        android:id="@+id/textPlats"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="251dp"
        android:layout_height="58dp"
        android:ems="10"
        android:fontFamily="sans-serif-medium"
        android:text="@string/Plats"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#000000"
        android:focusable="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.472" />


</androidx.constraintlayout.widget.ConstraintLayout>